Enhance README with project details and instructions
Added project overview, features, requirements, and usage instructions to README.